[project]
name = "grokking-algorithms"
version = "1.0.0"
description = "Notes and python packages of education and reading book."
authors = [
    {name = "Deniz",email = "erdogan33@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
